Dump command; biome config adjustments